[package]
name = "find-w"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
  "uuid",
  "time",
  "json",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras", "time", "uuid"] }

dotenvy = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
rand = "0.9.2"
base64 = "0.22.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
